--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="main-content">
             <div class="left-section">
                 <div class="name-input-section">
-                    <label>Enter your name and look to the right!</label>
+                    <label>Enter your name and look to the right! or bottom if using mobile ^-^</label>
                     <div class="input-container">
                         <input type="text" id="nameInput" placeholder="Your name here...">
                         <button id="submitNameBtn" class="submit-name-btn">Submit</button>
